--- a/crontab/master/main/webroot/index.html
+++ b/crontab/master/main/webroot/index.html
@@ -3,23 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <title>golang</title>
-    <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
-   <link href="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/js/bootstrap.bundle.js"></script>
+    <script src="/js/jquery.min.js"></script>
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <script src="/js/bootstrap.bundle.js"></script>
 </head>
 <body>
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-12">
             <div class="page-header">
-                <h2>管理后台<small>Golang分布式crontab</small></h2>
+                <h2>管理后台
+                    <small>Golang分布式crontab</small>
+                </h2>
             </div>
         </div>
     </div>
     <!-- 功能按钮-->
     <div class="row">
-          <div class="col-md-12">
-            <button type="button" class="btn btn-primary">新建任务</button>
+        <div class="col-md-12">
+            <button type="button" class="btn btn-primary" onclick="window.location.href='/edit.html'">新建任务</button>
         </div>
     </div>
 
@@ -37,18 +39,18 @@
                         </tr>
                         </thead>
                         <tbody id="job-list">
-                            <tr>
-                                <td class="job-name">job1</td>
-                                <td class="job-command">echo go</td>
-                                <td class="job-cronExpr">* * * * *</td>
-                                <td>
-                                    <div class="btn-toolbar">
-                                        <button class="btn btn-info edit-job" >编辑</button>
-                                        <button class="btn btn-danger delete-job" style="margin:0 5px">删除</button>
-                                        <button class="btn btn-warning kill-job">强杀</button>
-                                    </div>
-                                </td>
-                            </tr>
+                        <tr>
+                            <td class="job-name">job1</td>
+                            <td class="job-command">echo go</td>
+                            <td class="job-cronExpr">* * * * *</td>
+                            <td>
+                                <div class="btn-toolbar">
+                                    <button class="btn btn-info edit-job">编辑</button>
+                                    <button class="btn btn-danger delete-job" style="margin:0 5px">删除</button>
+                                    <button class="btn btn-warning kill-job">强杀</button>
+                                </div>
+                            </td>
+                        </tr>
                         </tbody>
                     </table>
                 </div>
@@ -57,23 +59,65 @@
     </div>
 
 </div>
+<script type="text/html" id="trTpl">
+    <tr>
+        <td class="job-name" attr_job_name="{job_name}">{job_name}</td>
+        <td class="job-command">{job_command}</td>
+        <td class="job-cronExpr">{job_cronExpr}</td>
+        <td>
+            <div class="btn-toolbar">
+                <button class="btn btn-info edit-job">编辑</button>
+                <button class="btn btn-danger delete-job" style="margin:0 5px">删除</button>
+                <button class="btn btn-warning kill-job">强杀</button>
+            </div>
+        </td>
+    </tr>
+</script>
 <script type="text/javascript">
-$(function(){
-    function joblist() {
+    $(function () {
+        function joblist() {
+            $.ajax({
+                url: '/job/list',
+                dataType: 'json',
+                success: function (res) {
+                    if (res.errno == 0) {
+                        var data = res.data;
+                        if (data.length > 0) {
+                            var trhtml = '';
+                            var tpl = $('#trTpl').html()
+                            for (var i in data) {
+                                var job = data[i];
+                                trhtml += tpl.replace(/{job_name}/g, job['name']).replace('{job_command}', job['command']).replace('{job_cronExpr}', job['cronExpr'])
+                            }
+                            $('#job-list').html(trhtml)
+                        }
+                    } else {
+                        console.log(res)
+                    }
+                }
+            })
+        }
 
-    }
-    $("#job-list").on("click",".edit-job",function (event) {
-        console.log($(this).attr("class"))
-    })
+        joblist();
 
-    $("#job-list").on("click",".delete-job",function (event) {
-        console.log($(this).attr("class"))
-    })
-     $("#job-list").on("click",".kill-job",function (event) {
-        console.log($(this).attr("class"))
-    })
+        $("#job-list").on("click", ".edit-job", function (event) {
+            var job_name = $(this).closest("tr").find(".job-name").attr("attr_job_name")
+            window.location.href = "/edit.html?job_name=" + job_name
+        })
 
-})
+        $("#job-list").on("click", ".delete-job", function (event) {
+            var job_name = $(this).closest("tr").find(".job-name").attr("attr_job_name")
+            $.ajax({
+                    url: "/job/delete",
+
+                }
+            )
+        })
+        $("#job-list").on("click", ".kill-job", function (event) {
+            console.log($(this).attr("class"))
+        })
+
+    })
 </script>
 
 </body>
