--- a/crontab/master/main/webroot/index.html
+++ b/crontab/master/main/webroot/index.html
@@ -40,7 +40,7 @@
                         </tr>
                         </thead>
                         <tbody id="job-list">
-                        <tr>
+                        <tr style="display: none">
                             <td class="job-name">job1</td>
                             <td class="job-command">echo go</td>
                             <td class="job-cronExpr">* * * * *</td>
