--- a/crontab/master/main/webroot/tables.html
+++ b/crontab/master/main/webroot/tables.html
@@ -85,7 +85,7 @@
 					<li class="active open">
 						<a href="#" class="dropdown-toggle">
 							<i class="menu-icon fa fa-list"></i>
-							<span class="menu-text"> Tables </span>
+							<span class="menu-text"> 任务管理 </span>
 
 							<b class="arrow fa fa-angle-down"></b>
 						</a>
@@ -96,7 +96,7 @@
 							<li class="active">
 								<a href="tables.html">
 									<i class="menu-icon fa fa-caret-right"></i>
-									Simple &amp; Dynamic
+									任务列表
 								</a>
 
 								<b class="arrow"></b>
@@ -130,9 +130,9 @@
 							</li>
 
 							<li>
-								<a href="#">Tables</a>
+								<a href="#">任务管理</a>
 							</li>
-							<li class="active">Simple &amp; Dynamic</li>
+							<li class="active">任务列表</li>
 						</ul><!-- /.breadcrumb -->
 
 						
@@ -143,10 +143,10 @@
 
 						<div class="page-header">
 							<h1>
-								Tables
+								任务管理
 								<small>
 									<i class="ace-icon fa fa-angle-double-right"></i>
-									Static &amp; Dynamic Tables
+									任务列表
 								</small>
 							</h1>
 						</div><!-- /.page-header -->
