--- a/crontab/master/main/webroot/edit.html
+++ b/crontab/master/main/webroot/edit.html
@@ -101,7 +101,7 @@
             url: '/job/checkexpcron',
             dataType: 'json',
             type:'POST',
-            data:'cronExpr='+cronExpr,
+            data:'cronExpr='+encodeURIComponent(cronExpr),
             success: function (res) {
                 if (res.errno == 0) {
                     var data=res.data;
