--- a/crontab/master/main/webroot/log.html
+++ b/crontab/master/main/webroot/log.html
@@ -33,7 +33,7 @@
                         </tbody>
                     </table>
 
-                    <div id="page" style="text-align: center">
+                    <div id="page" style="display: none">
                         <nav aria-label="Page navigation ">
                             <ul class="pagination">
                                 <li class="page-item"><a class="page-link" href="#">Previous</a></li>
