验证码和登录

--- a/crontab/master/main/webroot/index.html
+++ b/crontab/master/main/webroot/index.html
@@ -156,6 +156,7 @@
                         $('.pageNext').hide()
                         $('.pagePrev').hide()
                         console.log(res)
+                        alert(res.msg)
                     }
                 }
             })
