--- a/crontab/master/main/webroot/log.html
+++ b/crontab/master/main/webroot/log.html
@@ -7,6 +7,7 @@
     <link href="/css/bootstrap.min.css" rel="stylesheet">
     <script src="/js/bootstrap.bundle.js"></script>
     <script src="/js/layer/layer.js"></script>
+    <script src="/js/common.js"></script>
     <link href="https://cdn.bootcss.com/font-awesome/5.10.0-12/css/all.min.css" rel="stylesheet">
 </head>
 <body>
